fix: further opized the About page and modifed the global link color for stronger contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body {
 a {
 
   text-decoration: none;
-    color: var(--main-blue);
+    color: #0071eb;
 }
 /* Main button color */
 .btn-primary {
